@@ -194,7 +194,8 @@ void SetupInUseSelectionFlags()
                 if (parkEntranceEl->GetEntranceType() != ENTRANCE_TYPE_PARK_ENTRANCE)
                     break;
 
-                Editor::SetSelectedObject(ObjectType::ParkEntrance, 0, ObjectSelectionFlags::InUse);
+                type = iter.element->AsEntrance()->getEntryIndex();
+                Editor::SetSelectedObject(ObjectType::ParkEntrance, type, ObjectSelectionFlags::InUse);
 
                 // Skip if not the middle part
                 if (parkEntranceEl->GetSequenceIndex() != 0)
@@ -692,9 +693,8 @@ int32_t EditorRemoveUnusedObjects()
                 if (ObjectTypeIsIntransient(objectType))
                     continue;
 
-                // These object types require exactly one object to be selected at all times.
-                // Removing that object can badly break the game state.
-                if (objectType == ObjectType::ParkEntrance || objectType == ObjectType::Water)
+                // The water type controls the entire palette. Removing that object can badly break the game state.
+                if (objectType == ObjectType::Water)
                     continue;
 
                 // It’s hard to determine exactly if a scenery group is used, so do not remove these automatically.
