@@ -24,9 +24,11 @@
 
 using namespace OpenRCT2;
 
-ParkEntrancePlaceAction::ParkEntrancePlaceAction(const CoordsXYZD& location, ObjectEntryIndex pathType)
+ParkEntrancePlaceAction::ParkEntrancePlaceAction(
+    const CoordsXYZD& location, ObjectEntryIndex pathType, ObjectEntryIndex entranceType)
     : _loc(location)
     , _pathType(pathType)
+    , _entranceType(entranceType)
 {
 }
 
@@ -34,6 +36,7 @@ void ParkEntrancePlaceAction::AcceptParameters(GameActionParameterVisitor& visit
 {
     visitor.Visit(_loc);
     visitor.Visit("footpathSurfaceObject", _pathType);
+    visitor.Visit("entranceObject", _entranceType);
 }
 
 uint16_t ParkEntrancePlaceAction::GetActionFlags() const
@@ -47,6 +50,7 @@ void ParkEntrancePlaceAction::Serialise(DataSerialiser& stream)
 
     stream << DS_TAG(_loc);
     stream << DS_TAG(_pathType);
+    stream << DS_TAG(_entranceType);
 }
 
 GameActions::Result ParkEntrancePlaceAction::Query() const
@@ -156,6 +160,7 @@ GameActions::Result ParkEntrancePlaceAction::Execute() const
         entranceElement->SetDirection(_loc.direction);
         entranceElement->SetSequenceIndex(index);
         entranceElement->SetEntranceType(ENTRANCE_TYPE_PARK_ENTRANCE);
+        entranceElement->setEntryIndex(_entranceType);
         if (gFootpathSelection.LegacyPath == OBJECT_ENTRY_INDEX_NULL)
         {
             entranceElement->SetSurfaceEntryIndex(gFootpathSelection.NormalSurface);
