@@ -21,7 +21,7 @@ constexpr uint16_t MAX_BANNER_OBJECTS = 255;
 constexpr uint16_t MAX_PATH_OBJECTS = 255;
 constexpr uint16_t MAX_PATH_ADDITION_OBJECTS = 255;
 constexpr uint16_t MAX_SCENERY_GROUP_OBJECTS = 255;
-constexpr uint16_t MAX_PARK_ENTRANCE_OBJECTS = 1;
+constexpr uint16_t MAX_PARK_ENTRANCE_OBJECTS = 4;
 constexpr uint16_t MAX_WATER_OBJECTS = 1;
 constexpr uint16_t MAX_SCENARIO_TEXT_OBJECTS = 0;
 constexpr uint16_t MAX_TERRAIN_SURFACE_OBJECTS = 255;
